<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_small"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Album Name  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Album Name category -->
            <TextView
                style="@style/EditorStyle"
                android:text="@string/editor_product_name" />

            <!-- Album Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/editor_product_name_hint"
                android:inputType="textCapWords" />

        </LinearLayout>


        <!-- Band Name  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Band Name category -->
            <TextView
                style="@style/EditorStyle"
                android:text="@string/editor_product_sku" />

            <!-- Band Name field -->
            <EditText
                android:id="@+id/edit_product_sku"
                style="@style/EditorFieldStyle"
                android:hint="@string/editor_product_sku_hint"
                android:inputType="number" />

        </LinearLayout>

        <!-- Price   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Price  category -->
            <TextView
                style="@style/EditorStyle"
                android:text="@string/editor_product_price" />

            <!-- Price Input field -->
            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/editor_product_price_hint"
                android:inputType="number" />
        </LinearLayout>

        <!-- Quantity   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Quantity category -->
            <TextView
                style="@style/EditorStyle"
                android:text="@string/editor_product_qty" />

            <!-- Quantity input Field -->
            <EditText
                android:id="@+id/edit_quantity"
                style="@style/EditorFieldStyle"
                android:layout_weight="1"
                android:hint="@string/editor_product_qty_hint"
                android:inputType="number" />

            <!-- Quantity Update Buttons -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <!-- Add Record in inventory -->
                <Button
                    android:id="@+id/plus"
                    style="@style/PlusMinusButtonStyle"
                    android:text="@string/plus" />

                <!-- remove Record in inventory -->
                <Button
                    android:id="@+id/minus"
                    style="@style/PlusMinusButtonStyle"
                    android:text="@string/minus" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!-- Album Cover   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- Cover  category -->
            <TextView
                style="@style/CategoryStyleCover"
                android:text="@string/editor_product_img" />


            <Button
                android:id="@+id/add_image"
                style="@style/PlusMinusButtonStyle"
                android:layout_gravity="left"
                android:text="@string/plus" />

        </LinearLayout>

        <ImageView
            android:id="@+id/edit_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:src="@drawable/ic_add_img" />


    </LinearLayout>

    <!-- Supplier Name   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Supplier Name category -->
        <TextView
            style="@style/EditorStyle"
            android:text="@string/editor_product_sup" />

        <!-- Supplier name input Field -->
        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/editor_product_sup_hint"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <!-- Supplier  email  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Supplier email category -->
        <TextView
            style="@style/EditorStyle"
            android:text="@string/editor_product_sup_email" />

        <!-- Supplier email input Field -->
        <EditText
            android:id="@+id/edit_supplier_email"
            style="@style/EditorFieldStyle"
            android:hint="@string/editor_product_sup_email_hint"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <!-- Email Supplier Button -->
    <LinearLayout
        android:id="@+id/email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/more"
            android:textColor="@android:color/black" />

        <ImageView
            style="@style/emailButton"
            android:background="@drawable/ic_email" />

    </LinearLayout>


</LinearLayout>
